--- a/src/components/shared/Modal/Modal.module.scss
+++ b/src/components/shared/Modal/Modal.module.scss
@@ -1,6 +1,4 @@
 .modal {
-	display: grid;
-	place-items: center;
 	position: fixed;
 	inset: 0;
 	z-index: 5;
@@ -14,12 +12,19 @@
 	inset: 0;
 }
 
-.content {
-	max-width: 480px;
+.wrapper {
+	display: grid;
+	height: 100%;
+	overflow: auto;
+	place-items: center;
 	width: 100%;
+}
+
+.content {
+	max-height: 770px;
+	max-width: 480px;
 	padding: var(--xlg-spacing);
 	position: relative;
+	width: 100%;
 	z-index: 2;
-	overflow: auto;
-	max-height: 770px;
 }
